--- a/style.css
+++ b/style.css
@@ -459,14 +459,15 @@ section.visible {
  background-color: var(--second-bg-color);
 }
 .projects-box {
- display: grid;
- grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
- place-items: center;
- gap: 3rem;
- row-gap: 5rem;
- width: 100%;
-max-width: 1200px;
-margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 3rem;
+  row-gap: 5rem;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  place-items: center;
 }
 .projects-card {
  display: flex;
