--- a/style.css
+++ b/style.css
@@ -590,6 +590,25 @@ section.visible {
  z-index: 1;
  position: relative;
 }
+
+/* Responsive para pantallas medianas */
+
+@media (max-width: 900px) {
+  .projects-box {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: none;
+    gap: 2rem;
+    width: 100%;
+    max-width: 100vw;
+    place-items: center;
+  }
+  .projects-card {
+    width: 90vw;
+    max-width: 400px;
+  }
+}
+
 /* Responsive para pantallas pequeñas */
 @media (max-width: 768px) {
   html {
@@ -705,12 +724,12 @@ section.visible {
   }
 
   .projects-box {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
     gap: 3rem;
-    align-items: center;
+    width: 100%;
+    place-items: center;
   }
-
   .projects-card {
     width: 100%;
     max-width: 100%;
@@ -869,14 +888,15 @@ section.visible {
   }
 
   .projects {
-    padding: 5rem 5%;
+    padding: 5rem 0;
   }
 
   .projects-box {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
     gap: 3rem;
-    align-items: center;
+    width: 100%;
+    place-items: center;
   }
 
   .projects-card {
