--- a/style.css
+++ b/style.css
@@ -472,20 +472,21 @@ section.visible {
   place-items: center;
 }
 .projects-card {
- display: flex;
- flex-direction: column;
- align-items: center;
- justify-content: center;
- text-align: center;
- background-color: var(--bg-color);
- border: 2px solid var(--main-color);
- border-radius: 3rem;
- gap: 2rem;
- padding: 5rem 2rem;
- overflow: hidden;
- cursor: pointer;
- box-shadow: 0 0 5px var(--main-color);
- transition: 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  background-color: var(--bg-color);
+  border: 2px solid var(--main-color);
+  border-radius: 3rem;
+  gap: 2rem;
+  padding: 5rem 2rem;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 0 0 5px var(--main-color);
+  transition: 0.3s ease;
+  height: 100%;
 }
 .projects-card:hover {
  box-shadow: 0 0 25px var(--main-color), 0 0 50px var(--main-color);
@@ -944,4 +945,24 @@ section.visible {
     flex-wrap: wrap;
     margin-bottom: 1rem;
   }
+}
+
+
+.about-email {
+  margin-top: 2rem;
+  font-size: 1.8rem;
+  text-align: center;
+  color: var(--main-color);
+  font-weight: 500;
+}
+
+.about-email a {
+  color: var(--main-color);
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+
+.about-email a:hover {
+  color: #fff;
+  text-decoration: underline;
 }
